RESOLVED FIXED233521
[GTK][a11y] Signal state-changed:selected is not emitted for listbox elements when building with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=233521
Summary [GTK][a11y] Signal state-changed:selected is not emitted for listbox elements...
Carlos Garcia Campos
Reported 2021-11-26 05:37:10 PST
And in the case of menu lists is only emitted for the selected item but not the unselected one.
Attachments
Patch (15.23 KB, patch)
2021-11-26 05:41 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2021-11-26 05:41:10 PST
Carlos Garcia Campos
Comment 2 2021-11-27 08:41:32 PST
Note You need to log in before you can comment on or make changes to this bug.