[GTK][a11y] Signal state-changed:selected is not emitted for listbox elements when building with ATSPI https://bugs.webkit.org/show_bug.cgi?id=233521

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Post a selected change notification for option elements when the state changes.

* accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification):
* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::setSelectedState):

Tools:

Add test cases to check that the signal is now emitted as expected.

* TestWebKitAPI/Tests/WebKitGtk/TestWebKitAccessibility.cpp:
(AccessibilityTest::isSelected):
(testAccessibleStateChanged):
(testSelectionListBox):
(testSelectionMenuList):


Canonical link: https://commits.webkit.org/244571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286189 268f45cc-cd09-0410-ab3c-d52691b4dbfc